# installer

./: .gitignore  README.md  electron-init.js  package-lock.json  package.json  pnpm-lock.yaml  start-here.sh  wait-for-node.py
assets/: pgdl-server.service
new-imgui/: CMakeLists.txt  README.md  imgui.ini
new-imgui/src/: globalview.cpp  installationstate.cpp  main.cpp  styleshit.cpp  welcome.cpp
new-imgui/src/backend/: execute.cpp  utils.cpp
new-imgui/src/components/: bgglow.cpp  centeredtext.cpp  desktopbutton.cpp  hoverbutton.cpp  inputpreviewtext.cpp  mutedbutton.cpp  navigation.cpp  pagecounter.cpp  titletext.cpp
new-imgui/src/include/: easings.hpp  globalview.hpp  installationinfo.hpp  installationstate.hpp  smoothfactor.hpp  styleshit.hpp  windowstate.hpp
new-imgui/src/include/backend/: execute.hpp  utils.hpp
new-imgui/src/include/components/: bgglow.hpp  centeredtext.hpp  desktopbutton.hpp  hoverbutton.h  hoverbutton.hpp  inputpreviewtext.hpp  mutedbutton.hpp  navigation.hpp  pagecounter.hpp  titletext.hpp
new-imgui/src/include/languages/: en.hpp  languages.cpp  languages.hpp  ru.hpp
new-imgui/src/include/pages/: additionalsoftpage.hpp  basepage.hpp  depage.hpp  introduction.hpp  invalidpage.hpp  location.hpp  partitionpage.hpp  welcome.hpp
new-imgui/src/languages/: languages.cpp
new-imgui/src/pages/: additionalsoftpage.cpp  depage.cpp  introduction.cpp  invalidpage.cpp  location.cpp  partitionpage.cpp  welcome.cpp
python-side/: admin_utils.py  disk_utils.py  feature_installation.py  fish_utils.py  gdltypes.py  github_utils.py  grub_utils.py  gsr_utils.py  hiddify_utils.py  installation.py  konsole_utils.py  lact_utils.py  locale_utils.py  main.py  misc_utils.py  oobe_utils.py  pacman_utils.py  patching_utils.py  path_utils.py  permission_utils.py  process_utils.py  proprietary_drivers_utils.py  requirements.txt  resources_utils.py  shared.py  spectacle_fix.py  spectacle_utils.py  test.py  utils.py
python-side/apps/: aptpac.py  gdl_helper.py  gdl_updater.py  geode.py  github.py  gsr.py  hiddify.py  oobe.py  proprietary_drivers.py  spectacle.py  zapret.py
python-side/base/: admin.py  disks.py  grub.py  locale.py  nm_dbus.py  pacman.py  path.py  process.py  resources.py  system_configs.py
python-side/cosmetic/: branding.py  distro_release.py  fish.py  konsole.py  lact.py  misc.py  plymouth.py  sddm.py
python-side/resources/: 70-sayo.rules  gsr-handler.desktop  io.github.ilya_zlobintsev.LACT.desktop  kde_settings.conf  konsole_gdl.profile  steam-prime.desktop
python-side/resources/.config/: kdeglobals  kglobalshortcutsrc  konsolerc  kscreenlockerrc  kwinrc  kwinrulesrc  kxkbrc  plasma-org.kde.plasma.desktop-appletsrc  plasmarc  set-gd-wallpaper.sh
src/: app.css
src/lib/: index.ts
src/lib/api/: index.ts
src/routes/: +layout.svelte  +page.svelte
(+66 files in other folders)
